--- a/src/views/auth/signup.ejs
+++ b/src/views/auth/signup.ejs
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up - HelloRun</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+
   <link rel="stylesheet" href="/css/signup.css">
-  <script src="https://unpkg.com/lucide@latest"></script>
+
+    <%- include('../layouts/head', { title: 'Sign Up - helloRun' }) %>
 </head>
 <body>
   <%- include('../layouts/nav') %>
