--- a/src/views/auth/reset-password-expired.ejs
+++ b/src/views/auth/reset-password-expired.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include('../layouts/head', { title: 'Reset Link Expired - helloRun' }) %>
+  <%- include('../layouts/head', { title: 'Login - helloRun' }) %>
+<
 </head>
 <body>
   <%- include('../layouts/nav') %>
